--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "zhy-common-style-less",
-  "version": "1.0.2",
+  "name": "@zhy/common-style-less",
+  "version": "1.0.0",
   "description": "A commonly used less style library, saves development time, and has no other dependencies.",
   "main": "common-style-less.less",
   "keywords": [
     "less",
-    "common-style"
+    "common style",
+    "css style"
   ],
   "repository": "zhenghaoyang24/common-style-less",
   "license": "MIT",
