--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@zhy/common-style-less",
-  "version": "1.0.0",
+  "name": "@hoeyzheng/common-style-less",
+  "version": "1.0.1",
   "description": "A commonly used less style library, saves development time, and has no other dependencies.",
   "main": "common-style-less.less",
   "keywords": [
